# ardupilot-mavsdk

examples/missions_copter/: CMakeLists.txt  missions_copter_test.cpp
